@@ -3,6 +3,8 @@
 	 * src/dvi.c, src/dvicodes.h, vf.c: Revert "Support DVI-IVD inspired text
 	 reflection for XeTeX".
 	 * src/fontmap.c: Remove commented out old Mac code.
+	 * src/fontmap.c (pdf_load_native_font_from_path, pdf_load_native_font):
+	 Merge.
 
 2013-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
